--- a/instagram-ng14/src/app/components/shared/feeds/feeds.component.html
+++ b/instagram-ng14/src/app/components/shared/feeds/feeds.component.html
@@ -33,6 +33,7 @@
         slideImage="1"
         [imageSize]="{ width: sliderImageWidth, height: sliderImageHeight }"
         [imagePopup]="false"
+        [videoAutoPlay]="true"
         #nav
       ></ng-image-slider>
       <div class="heart" id="heart-{{feed.id}}"></div>
