--- a/instagram-ng14/src/app/components/profile/profile.component.html
+++ b/instagram-ng14/src/app/components/profile/profile.component.html
@@ -113,12 +113,12 @@
           </a>
         </li>
         <li>
-          <a class="inline-block p-3" href="#">
-            <span class="hidden md:inline">igtv</span>
+          <a class="inline-block p-3">
+            <span class="hidden md:inline">saved</span>
           </a>
         </li>
         <li>
-          <a class="inline-block p-3" href="#">
+          <a class="inline-block p-3">
             <span class="hidden md:inline">tagged</span>
           </a>
         </li>
