--- a/instagram-ng14/src/app/components/story/list-story/list-story.component.html
+++ b/instagram-ng14/src/app/components/story/list-story/list-story.component.html
@@ -34,13 +34,17 @@
       /></ng-template>
       <span class="text-xs mx-4">Your story</span>
     </div>
-    <div *ngFor="let storyUser of allUsers" class="text-center">
+    <div
+      *ngFor="let storyUser of listStory"
+      class="text-center"
+      (click)="viewStory()"
+    >
       <img
-        *ngIf="storyUser?.userProfile?.profile_img; else elseBlock"
+        *ngIf="storyUser?.user?.userProfile?.profile_img; else elseBlock"
         class="object-fill h-20 w-20 rounded-full border border-red-500 p-0.5 mx-1 cursor-pointer"
-        src="{{ imageUrl }}/{{ storyUser?.userProfile?.profile_img }}"
+        src="{{ imageUrl }}/{{ storyUser?.user?.userProfile?.profile_img }}"
       />
-      <span class="text-xs">{{ storyUser.username }}</span>
+      <span class="text-xs">{{ storyUser.user.username }}</span>
       <ng-template #elseBlock
         ><img
           class="h-20 w-20 rounded-full border border-red-500 p-0.5 mx-1 cursor-pointer"
@@ -49,8 +53,76 @@
     </div>
   </div>
 </div>
+
 <app-add-story
   *ngIf="addstory"
   [user]="user"
   (onClose)="modalClosed($event)"
 ></app-add-story>
+
+<div
+  *ngIf="isvisible"
+  class="fixed top-0 left-0 right-0 z-50 w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] min-h-auto bg-gray-400 bg-opacity-40 flex items-center justify-center"
+>
+  <div class="relative w-full max-w-2xl h-auto">
+    <!-- Modal content -->
+    <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+      <!-- Modal header -->
+
+      <div
+        class="flex items-start justify-between p-4 border-b rounded-t dark:border-gray-600"
+      >
+        <h3
+          class="text-xl font-semibold text-gray-900 dark:text-white flex items-center"
+        >
+          <img
+            *ngIf="user.userProfile.profile_img; else elseBlock"
+            class="h-6 w-6 rounded-full border border-gray-100 shadow-sm"
+            src="{{ imageUrl }}/{{ user?.userProfile?.profile_img }}"
+            alt="user image"
+          />
+          <ng-template #elseBlock
+            ><img
+              class="h-8 w-8 rounded-full"
+              src="../../../../assets/default.png"
+            />
+          </ng-template>
+          <b class="mx-1 text-sm">{{ user.username }}</b>
+        </h3>
+        <button
+          type="button"
+          (click)="closeModal()"
+          class="text-blue-500 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
+          data-modal-hide="staticModal"
+        >
+          X
+        </button>
+      </div>
+      <!-- Modal body -->
+      <div class="h-full">
+        <carousel
+          [images]="images"
+          [cellsToShow]="1"
+          [loop]="true"
+          [autoplay]="true"
+          [autoplayInterval]="3000"
+        >
+        </carousel>
+      </div>
+
+      <!-- Modal footer -->
+      <div
+        *ngIf="listStory"
+        class="flex items-center p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600"
+      >
+        <button
+          type="button"
+          (click)="goBackToPrevPage()"
+          class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600 mr-auto"
+        >
+          Cancel
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
