--- a/instagram-ng14/src/app/components/posts/add-comment/add-comment.component.html
+++ b/instagram-ng14/src/app/components/posts/add-comment/add-comment.component.html
@@ -376,19 +376,42 @@
                     >
                   </div>
                 </div>
-                <input
-                  type="text"
-                  class="w-full ml-4 pl-2 mx-2 my-4 border border-gray-300 rounded-full"
-                  placeholder="reply to {{ cmt.byUser.username }}"
-                  name="comment"
-                  formControlName="comment"
-                />
-                <button
-                  type="submit"
-                  class="mr-2 border bg-gray-200 rounded p-2 my-4"
-                >
-                  POST
-                </button>
+                <div class="relative flex w-full">
+                  <input
+                    type="text"
+                    class="w-full ml-4 pl-2 mx-2 my-4 border border-gray-300 rounded-full"
+                    placeholder="reply to {{ cmt.byUser.username }}"
+                    name="comment"
+                    formControlName="comment"
+                    [(ngModel)]="textArea"
+                  />
+                  <button
+                    type="button"
+                    class="right-20 bottom-6 text-lg absolute"
+                    (click)="isEmojiPickerVisible = !isEmojiPickerVisible"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.5"
+                      stroke="currentColor"
+                      class="w-6 h-6"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="M15.182 15.182a4.5 4.5 0 01-6.364 0M21 12a9 9 0 11-18 0 9 9 0 0118 0zM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75zm-.375 0h.008v.015h-.008V9.75zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75zm-.375 0h.008v.015h-.008V9.75z"
+                      />
+                    </svg>
+                  </button>
+                  <button
+                    type="submit"
+                    class="mr-2 border bg-gray-200 rounded p-2 my-4"
+                  >
+                    POST
+                  </button>
+                </div>
               </form>
             </div>
             <!-- end reply box -->
@@ -411,9 +434,9 @@
           >
             <div class="flex items-center px-4 py-3">
               <img
-                *ngIf="loggedUser.userProfile.profile_img; else default"
+                *ngIf="loggedUser?.userProfile?.profile_img; else default"
                 class="h-8 w-8 rounded-full"
-                src="{{ imageUrl }}/{{ loggedUser.userProfile.profile_img }}"
+                src="{{ imageUrl }}/{{ loggedUser?.userProfile?.profile_img }}"
               />
               <ng-template #default
                 ><img
@@ -440,7 +463,8 @@
                 [(ngModel)]="textArea"
                 formControlName="comment"
               />
-              <button type="button"
+              <button
+                type="button"
                 class="right-20 bottom-6 text-lg absolute"
                 (click)="isEmojiPickerVisible = !isEmojiPickerVisible"
               >
