--- a/instagram-ng14/src/app/components/profile/profile.component.html
+++ b/instagram-ng14/src/app/components/profile/profile.component.html
@@ -114,7 +114,7 @@
         </li>
         <li>
           <a class="inline-block p-3">
-            <span class="hidden md:inline">saved</span>
+            <span class="hidden md:inline cursor-pointer" (click)="savedPostList()">saved</span>
           </a>
         </li>
         <li>
