--- a/instagram-ng14/src/app/components/profile/profile.component.html
+++ b/instagram-ng14/src/app/components/profile/profile.component.html
@@ -108,7 +108,7 @@
         class="flex items-center justify-around md:justify-center space-x-12 uppercase tracking-widest font-semibold text-xs text-gray-600 border-t">
         <!-- posts tab is active -->
         <li class="md:border-t md:border-gray-700 md:-mt-px md:text-gray-700">
-          <a class="inline-block p-3" href="#">
+          <a class="inline-block p-3" >
             <span class="hidden md:inline">post</span>
           </a>
         </li>
