--- a/instagram-ng14/src/app/components/posts/create-post/create-post.component.html
+++ b/instagram-ng14/src/app/components/posts/create-post/create-post.component.html
@@ -101,10 +101,10 @@
               <div class="ml-3">
                 <span
                   class="text-sm font-semibold antialiased block leading-tight"
-                  >{{ user.username }}</span
+                  >{{ user?.username }}</span
                 >
                 <span class="text-gray-600 text-xs block"
-                  >{{ user.firstname }} {{ user.lastname }}</span
+                  >{{ user?.firstname }} {{ user?.lastname }}</span
                 >
               </div>
             </div>
